Saving changes creating csv file from df

--- a/world_happiness_versus_economic_freedom .ipynb
+++ b/world_happiness_versus_economic_freedom .ipynb
@@ -1545,6 +1545,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_final.to_csv(output_data_file, index_label=\"\")\n",
+    "\n",
+    "df_final.to_csv(\"data/mergeddf.csv\", index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
