split df into low and high

--- a/world_happiness_versus_economic_freedom .ipynb
+++ b/world_happiness_versus_economic_freedom .ipynb
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1532,7 +1532,7 @@
        "[130 rows x 38 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_final.to_csv(output_data_file, index_label=\"\")\n",
+    "#Creating a csv file\n",
     "\n",
     "df_final.to_csv(\"data/mergeddf.csv\", index=False, header=True)"
    ]
@@ -1560,6 +1560,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapeof newdataframes - (65, 38), (64, 38)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Spliiting DataFrame in half\n",
+    "#df_split = df_final(frac=0.5)\n",
+    "#df_split.reset_index()\n",
+    "\n",
+    "low = df_final_sorted.iloc[:65,:]\n",
+    "high = df_final_sorted.iloc[66:,:]\n",
+    "print(\"Shapeof newdataframes - {}, {}\".format(df_1.shape, df_2.shape))"
+   ]
   },
   {
    "cell_type": "code",
