Making changes to main file

--- a/Main/world_happiness_versus_economic_freedom .ipynb
+++ b/Main/world_happiness_versus_economic_freedom .ipynb
@@ -3466,14 +3466,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "low.head() "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(low. columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_df = pd.DataFrame(low, columns = ['Country', 'Happiness Rank_2015', 'Happiness Score_2015',\n",
+    "       'Economy (GDP per Capita)_2015', 'Health (Life Expectancy)_2015',\n",
+    "       'Generosity_2015', 'Freedom_2015', 'Trust (Government Corruption)_2015',\n",
+    "       'Happiness Rank_2016', 'Happiness Score_2016',\n",
+    "       'Economy (GDP per Capita)_2016', 'Health (Life Expectancy)_2016',\n",
+    "       'Generosity_2016', 'Freedom_2016', 'Trust (Government Corruption)_2016',\n",
+    "       'Happiness Rank_2017', 'Happiness Score_2017',\n",
+    "       'Economy (GDP per Capita)_2017', 'Health (Life Expectancy)_2017',\n",
+    "       'Generosity_2017', 'Freedom_2017', 'Trust (Government Corruption)_2017',\n",
+    "       'Happiness Rank_2018', 'Happiness Score_2018',\n",
+    "       'Economy (GDP per Capita)_2018', 'Health (Life Expectancy)_2018',\n",
+    "       'Generosity_2018', 'Freedom_2018', 'Trust (Government Corruption)_2018',\n",
+    "       'Happiness Rank_2019', 'Happiness Score_2019',\n",
+    "       'Economy (GDP per Capita)_2019', 'Health (Life Expectancy)_2019',\n",
+    "       'Generosity_2019', 'Freedom_2019', 'Trust (Government Corruption)_2019',\n",
+    "       'Economic Freedom Rank', 'Economic Freedom Score', 'QuantileRank'])\n",
+    "low_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_needed = ['Happiness Score',\n",
+    "       'Economy', 'Health',\n",
+    "       'Generosity', 'Freedom', 'Trust']\n",
+    "for col in columns_needed:\n",
+    "    low_df[col+\"_avg\"]= low_df.loc[:,low_df.columns.str.contains(col)].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_df.loc[:,low_df.columns.str.contains(r\"Economy \\(GDP per Capita\\)\")]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_df_melt=pd.melt(low_df,value_vars=low_df.columns[low_df.columns.str.contains(\"avg\")],\n",
+    "                    var_name=\"catogories\",value_name=\"score\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.barplot(x=\"score\",y=\"catogories\",data=low_df_melt, ci=None)\n",
+    "plt.savefig(\"data/lower_bar_plot.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_df_line=pd.DataFrame() \n",
+    "for col in columns_needed:\n",
+    "    try:\n",
+    "        low_df_line[col]  = low_df.loc[:,(low_df.columns.str.match(col))&~\n",
+    "                                       (low_df.columns.str.contains(\"avg\"))].mean(axis=0).values\n",
+    "    except:\n",
+    "        print(col)\n",
+    "low_df_line[\"year\"]=range(2015,2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_df_line=pd.melt(low_df_line,id_vars=[\"year\"],value_vars=low_df_line.columns[low_df_line.columns!=\"year\"],var_name=\"catogories\",value_name=\"score\")\n",
+    "low_df_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(data=low_df_line,x=\"year\",y=\"score\",hue=\"catogories\")\n",
+    "plt.savefig(\"data/lower_line_plot.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating a csv file\n",
+    "\n",
+    "low_df.to_csv(\"data/rachel.csv\", index=False, header=True)"
+   ]
   },
   {
    "cell_type": "code",
